# handovers_kinova_gen3

./: ReadMe.md
handover_test/: CMakeLists.txt  package.xml
handover_test/data/: SampleVelocityProfile.txt  data_data_study09.txt  data_data_study10.txt  data_optimal_session.txt  data_p013.txt  data_participant_number.txt  data_pilot10.txt  data_pilot11.txt  data_pilot12.txt  data_pilot1_v2.txt  data_pilot2_v2.txt  data_pilot3_v2.txt  data_pilot4_v2.txt  data_pilot5.txt  data_pilot5_v2.txt  data_pilot6.txt  data_pilot6_v2.txt  data_pilot7.txt  data_pilot7_v2.txt  data_pilot8.txt  data_pilot8_v2.txt  data_pilot9.txt  data_rough.txt  data_study01.txt  data_study02.txt  data_study03.txt  data_study04.txt  data_study05.txt  data_study06.txt  data_study07.txt  data_study08.txt  data_study09.txt  data_study11.txt  data_study12.txt  data_study13.txt  data_study14.txt  data_study15.txt  data_study16.txt  data_study17.txt  data_study18.txt  (+50 more)
handover_test/launch/: human_safety_check.launch
handover_test/scripts/: config.py  data_logger.py  human_safety_zone.py  kinova3_handover_controller.py  kinova_controller.py  kinova_velocity_publisher.py  python_ros_skeleton.py  task_planner.py  velocity_logger.py
mocap_optitrack/config/: mocap.yaml
stl_experiment_ui/: CMakeLists.txt  package.xml  plugin.xml
stl_experiment_ui/scripts/: stl_experiment_ui
stl_experiment_ui/src/: experiment_ui.py
stl_experiment_ui/user_interface/: common_dashboard.ui  dummy_controller_design.ui  pv_controller_design.ui  pv_controller_design_option2.ui  stl_controller_design.ui  timer.ui
(+4 files in other folders)
